@@ -83,6 +83,7 @@ void k_nn(double *X,double *dist,double *a,int *ni,int *n,int *d,int *k,int *get
 void kba_nn(double *X,double *dist,double *a,int *ni,int *n,int *d,int *k,
             int *get_a,double *cut_off);
 void Rkdtree(double *X,int *n, int *d,double *lo,double *hi,int *ind, int *rind);
+void tri2nei(int *t,int *nt,int *n,int *d,int *off);
 void sspl_construct(double *lambda,double *x,double *w,double *U,double *V,
              double *diagA,double *lb,int *n,double *tol);
 void sspl_mapply(double *y,double *x,double *w,double *U,double *V,int *n,int *nf,double *tol,int *m);
